Fixed eclipse class path problems

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -4,7 +4,7 @@ stdio-pinned-dispatcher {
 }
 
 akka.actor.deployment {
-	/kuant/user/cmdreader {
+	/cmdreader {
 		dispatcher = stdio-pinned-dispatcher
 	}
 }
