--- a/pom.xml
+++ b/pom.xml
@@ -21,5 +21,11 @@
       <version>3.8.1</version>
       <scope>test</scope>
     </dependency>
+    <dependency>
+    	<groupId>com.typesafe.akka</groupId>
+    	<artifactId>akka-actor-tests_2.10</artifactId>
+    	<version>2.3.0</version>
+    	<type>pom</type>
+    </dependency>
   </dependencies>
 </project>
